<resources>
    <string name="app_name">GithubUserApps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_searchbar">Cari Pengguna</string>
    <string name="text_avatar">Photo Profile</string>
    <string name="github_user">Github User</string>
    <string name="cari_pengguna">Cari pengguna..</string>
    <string name="followers">Followers</string>
    <string name="memuat_nama">Memuat Nama</string>
    <string name="memuat_username">Memuat Username</string>
    <string name="memuat_follower">Memuat follower</string>
    <string name="following">Following</string>
    <string name="follower">follower</string>
    <string name="pengguna_favorit">Pengguna Favorit</string>
    <string name="back">Back</string>
    <string name="bookmark">Bookmark</string>
    <string name="swithc_theme">Switch Theme</string>
    <string name="settings">Settings</string>
</resources>